# game.libretro.mupen64plus-nx

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  Readme.md  appveyor.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/mupen64plus/: 0001-libretro-Use-c-buttons-without-modifier-key.patch  0002-libretro-Remove-specialization-of-controller-map-for.patch  CMakeLists.txt  libretro-mupen64plus-02-remove-specialization-of-controller-map.patch  mupen64plus.txt
depends/common/mupen64plus-nx/: 0001-Enable-all-options.patch  0002-Default-to-angrylion.patch  0002-Working-Defaults.patch  0003-Fix-compiler-error-with-GCC-15.patch  0004-Fix-compiler-error-on-Windows.patch  0005-libpng-Fix-macOS-build-by-guarding-fp.h-include.patch  0006-mupen64plus-nx-Fix-bundled-zlib-build-on-macOS.patch  0007-Wait-for-init-before-save-load-state.patch  CMakeLists.txt  mupen64plus-nx.txt
depends/windows/mingw/: 03-use-curl.patch  CMakeLists.txt  mingw.sha256  mingw.txt
game.libretro.mupen64plus/: addon.xml  addon.xml.in  buttonmap.xml
game.libretro.mupen64plus-nx/: addon.xml.in
game.libretro.mupen64plus-nx/resources/: buttonmap.xml  settings.xml
game.libretro.mupen64plus-nx/resources/language/resource.language.af_za/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.am_et/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ar_dz/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ar_sa/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ast_es/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.az_az/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.be_by/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.bg_bg/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.bs_ba/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ca_es/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.cs_cz/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.cy_gb/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.da_dk/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.de_de/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.el_gr/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.en_au/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.en_gb/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.en_nz/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.en_us/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.eo/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.es_ar/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.es_es/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.es_mx/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.et_ee/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.eu_es/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fa_AF/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fa_af/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fa_ir/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fi_fi/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fil/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fo_fo/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fr_ca/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.fr_fr/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.gl_es/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.he_il/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.hi_in/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.hr_hr/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.hu_hu/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.hy_am/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.id_id/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.is_is/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.it_it/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ja_jp/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.kl_gl/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.kn_in/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ko_kr/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.lt_lt/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.lv_lv/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.mi/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.mk_mk/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ml_in/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.mn_mn/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.ms_my/: strings.po
game.libretro.mupen64plus-nx/resources/language/resource.language.mt_mt/: strings.po
game.libretro.mupen64plus/resources/: buttonmap.xml  settings.xml
game.mupen64plus/: addon.xml
(+33 files in other folders)
